<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/add_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:maxLines="1"
            android:minHeight="60dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/add_item_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/cost_hint"
            android:inputType="number"
            android:maxLength="8"
            android:maxLines="1"
            android:minHeight="60dp" />

        <EditText
            android:id="@+id/add_item_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/location_hint"
            android:maxLines="1"
            android:minHeight="60dp" />

        <EditText
            android:id="@+id/add_item_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="top"
            android:hint="@string/description_hint"
            android:maxLines="4" />

        <RelativeLayout
            android:id="@+id/add_image_container"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/plus_addimage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/plus_addimage"
                android:layout_centerInParent="true"
                android:text="Attach Image" />

            <ImageView
                android:id="@+id/add_item_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop" />

        </RelativeLayout>


    </LinearLayout>
</ScrollView>

